--- a/index.html
+++ b/index.html
@@ -1,43 +1,47 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mans Portfolio</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <header>
-    <h1>Mnas Portfolio</h1>
-  </header>
-  <section>
-    <h2>Par mani</h2>
-    <p>Pašlaik mācos Rīgas tehniskās universitātes inženierzinātņu vidusskolā.</p>
-  </section>
-  <section>
-    <h2>Sazinies ar mani!</h2>
-    <script src="https://www.google.com/recaptcha/api.js"></script>
-    <script>
-        function onSubmit(token) {
-          document.getElementById("demo-form").submit();
-        }
-      </script>
-    <button class="g-recaptcha" 
-    data-sitekey="6LdMCWQqAAAAAOJTBOS3liqshvGcT02GBbI8wydD" 
-    data-callback='onSubmit' 
-    data-action='submit'>Submit</button>
-    <script src="https://www.google.com/recaptcha/api.js?render=reCAPTCHA_site_key"></script>
-    <script>
-        function onClick(e) {
-          e.preventDefault();
-          grecaptcha.ready(function() {
-            grecaptcha.execute('reCAPTCHA_site_key', {action: 'submit'}).then(function(token) {
-                // Add your logic to submit to your backend server here.
-            });
+  <title>Portfolio</title>
+  <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
+  <script type="text/javascript">
+    (function () {
+      emailjs.init({
+        publicKey: "JSzALyNrDGMPil82D",
+      });
+    })();
+  </script>
+  <script type="text/javascript">
+    window.onload = function () {
+      document.getElementById('form').addEventListener('submit', function (event) {
+        event.preventDefault();
+        // these IDs from the previous steps
+        emailjs.sendForm('service_hkpfk94', 'template_kaxeix5', this)
+          .then(() => {
+            alert('E-pasts aizsūtīts');
+          }, (error) => {
+            console.log('Kļūda', error);
           });
-        }
-    </script>
-  
-  </section>
+      });
+    }
+  </script>
+
+<script src="https://www.google.com/recaptcha/api.js" async defer></script>
+
+</head>
+
+
+<body>
+  <form id="form">
+    <label>Vārds</label><br>
+    <input type="text" name="user_name" required><br>
+    <label>E-pasts</label><br>
+    <input type="email" name="user_email" required><br>
+    <label>Ziņa</label><br>
+    <textarea name="message" required></textarea><br>
+    <div class="g-recaptcha" data-sitekey="6LcR6XAqAAAAANkCFSi_MuQI9rbp1sQozT9a17JH"></div>
+    <input type="submit" value="Send">
+  </form>
 </body>
+
 </html>
