--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Portfolio</title>
+  <title>Matīss Kalniņš</title>
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js"></script>
   <script type="text/javascript">
     (function () {
@@ -34,9 +34,11 @@
 <body>
   <form id="form">
     <label>Vārds</label><br>
-    <input type="text" name="user_name" required><br>
+    <input type="text" name="name" required><br>
     <label>E-pasts</label><br>
-    <input type="email" name="user_email" required><br>
+    <input type="email" name="email" required><br>
+    <label>Temats</label><br>
+    <input type="text" name="subject" requred><br>
     <label>Ziņa</label><br>
     <textarea name="message" required></textarea><br>
     <div class="g-recaptcha" data-sitekey="6LcR6XAqAAAAANkCFSi_MuQI9rbp1sQozT9a17JH"></div>
